# mlx-train

./: .gitignore  README.md  config.yaml  dataset_generate.py  inference.py  main.py  post_run.sh  pyproject.toml  remote.py
data/: train copy.jsonl  train.jsonl
mlx_configure/: distributed_config.py  enable_nopasswd_sudo.py  hosts.py  restart.py  ring_sync.py  rsync.py  run.py  ssh_setup.py  tailscale_pull.py
mlx_train/: dataset.py  distributed.py  logger.py  model.py  ppp.py  tp.py  train.py  utils.py
shared/: config.py  const.py
