[project]
name = "mlx-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mlx>=0.29.0",
    "mlx-data>=0.1.0",
    "mlx-lm>=0.27.0",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "ruff>=0.12.11",
]

[tool.uv.sources]
mlx-lm = { git = "https://github.com/mattbeton/mlx-lm-dev.git", branch = "dataset_local_force" }

[tool.basedpyright]
typeCheckingMode = "basic"
